# hackathon-todo-cli-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-todo-app/: 0001-create-todo-app-spec.spec.prompt.md  0002-plan-todo-app.plan.prompt.md  0003-generate-todo-app-tasks.tasks.prompt.md  0004-implement-todo-app.tasks.prompt.md
history/prompts/001-todo-intelligent-scheduling/: 0001-create-todo-intelligent-scheduling-spec.spec.prompt.md  0002-create-intelligent-scheduling-tasks.tasks.prompt.md  0003-generate-intelligent-scheduling-tasks.tasks.prompt.md
history/prompts/constitution/: 0001-update-constitution.constitution.prompt.md  0002-update-todo-constitution.constitution.prompt.md  1-update-constitution.constitution.prompt.md
history/prompts/general/: 0001-implement-intermediate-features-cli.general.prompt.md
history/prompts/todo-app-intermediate/: 0002-create-plan.plan.prompt.md  0005-enhance-plan.plan.prompt.md  (+8 more)
phase-II/backend/: .gitignore  Dockerfile  README.md
phase-II/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-intelligent-scheduling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/todo-app-intermediate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_app/: __init__.py  __main__.py  main.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_task.py  test_task_manager.py
(+31 files in other folders)
