[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.1.0"
description = "A command-line interface todo application with in-memory storage"
readme = "README.md"
authors = [{name = "Todo App Developer", email = "developer@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo-app = "src.todo_app.main:main"

[project.urls]
Homepage = "https://github.com/username/todo-app"
Repository = "https://github.com/username/todo-app"